# ALU_INT_web_scraper

./: .gitignore  BLANK_README.md  Disaster_Subclasses.py  LICENSE  README.md  README_Old.md  WebCrawler.py  main.py  pyproject.toml
config/categories/: categories.json
config/gpt_keys/: README.md
config/website_definitions/: README.md  example.json
config/website_definitions/definitions/: README.md
configs/categories/: README.md  categories.json
configs/mysql_credentials/: README.md
configs/website_definitions/definitions/: README.md
documentation/: Disaster.md  GptParser.md  README.md  TODO.md  WebCrawler.md
gpt_keys/: README.md
source/: Categories.py  CustomExceptions.py  Disaster.py  DisasterSubclasses.py  Disaster_Subclasses.py  GptParser.py  WebCrawler.py  main.py
source/database_integration/: AbsDatabase.py  JustPrintData.py  MakeConnectionPool.py  MySQL.py  PseudoConnectionPool.py  README.md
tests/: GptParser_test.py  MySQL_t_e_s_t.py  WebCrawler_test.py  abstract_nonsense.py  api_tests.py  classifier_test.py  news_samples.txt  tests.py
tests/test_samples/: .gitignore  connection_pool_t_e_s_t.py  floodlist_example.html  news_samples.txt  some_news.py
utilities/database_setup/: README.md  mysql_setup_test.py
website_definitions/: README.md  example.json  useful_whitelists.json
