[tool.poetry]
name = "pyscraper"
version = "0.1.0"
description = "A simple news outlet scraper"
authors = ["Alberto Colmenero Fernandez <colmenero.a.f@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.2"
openai = "^1.8.0"
selenium = "^4.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
